# mechano_app

./: .gitignore  CLAUDE.md  README.md  ai_agent.py  app.py  pyproject.toml  requirements.txt
.github/: CODEOWNERS
.github/workflows/: ci.yml
data/: __init__.py  code_snippets.py  lessons.py  passages.py  words.py
static/css/: style.css
static/js/: engine.js
templates/: auth.html  index.html
tests/: conftest.py  test_api.py
