[project]
name = "mechano-app"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.3",
    "openai-agents>=0.13.1",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
